--- a/index.html
+++ b/index.html
@@ -70,6 +70,46 @@
       text-align: left;
     }
 
+    .venmo {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #e9ecef;
+      padding: 1rem;
+      height: 100%;
+      text-decoration: none;
+      font-family: 'Lato';
+      font-weight: 900;
+      border-radius: 0 !important;
+      color: #B31B1B;
+      cursor: pointer;
+      box-sizing: border-box;
+      font-size: 1 rem;
+      font-style: normal;
+      line-height: 1.6;
+
+    }
+
+    .im {
+      width: 100%;
+      border-radius: 5px;
+      margin-bottom: .5rem !important;
+      vertical-align: middle;
+      border-style: none;
+      box-sizing: border-box;
+      overflow-clip-margin: content-box;
+      overflow: clip;
+      font-family: 'Lato';
+      font-weight: 900;
+      color: #B31B1B;
+      cursor: pointer;
+
+      font-size: 1 rem;
+      font-style: normal;
+      line-height: 1.6;
+
+    }
+
     .amount {
       font-size: 3rem;
       color: black;
