--- a/webtapp.html
+++ b/webtapp.html
@@ -43,7 +43,7 @@
     <input type="radio" name="whowon" value="Awon"> Player A
     <input type="radio" name="whowon" value="Bwon"> Player B
   </div>
-  <div class="pointq">How was the point won???</div>
+  <div class="pointq">How was the point won?</div>
   <div class="radio">
     <input type="radio" name="howwon" value="ace"> Ace
     <input type="radio" name="howwon" value="swinner"> Service Winner
@@ -567,6 +567,7 @@
       mm7.textContent = 'BPs Faced per Set'
       const mr7 = document.querySelector('.mr7');
       mr7.textContent = ''
+      servingbfbottom()
     }
     function servingbftop() {
       const tl1 = document.querySelector('.tl1');
@@ -611,6 +612,7 @@
       tm7.textContent = ''
       const tr7 = document.querySelector('.tr7');
       tr7.textContent = ''
+      servingbfmiddle()
     }
 
     function servingbf() {
@@ -621,8 +623,7 @@
       mhead.textContent = 'Points';
       const bhead = document.querySelector('.btb');
       bhead.textContent = 'Games';
-      servingbfmiddle()
-      servingbfbottom()
+
       servingbftop()
 
 
